simplify snippets api
remove id field from snippets, instead mandate that snippets names be globally
unique.
