# internal/api/snippets.go
@@ -3,7 +3,6 @@ package api
 import (
 	"context"
 
-	"github.com/oklog/ulid/v2"
 	snippetsv1 "github.com/vinceanalytics/vince/gen/proto/go/vince/snippets/v1"
 	"github.com/vinceanalytics/vince/internal/core"
 	"github.com/vinceanalytics/vince/internal/db"
@@ -17,41 +16,45 @@ import (
 	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
+// Snippets are named piece of sql query that can be executed. A snippet
+// consists of a name, a query string and parameters
+//
+// Parameter allows named parameter substitution inside the query. Snippets
+// names are globally unique, you can't have more than one snippet with the same
+// name.
+
 var _ snippetsv1.SnippetsServer = (*API)(nil)
 
-var snippets404 = status.Error(codes.NotFound, "snippet does not exists")
+var ErrSnippetNotFound = status.Error(codes.NotFound, "snippet does not exists")
 
-func SnippetsE404() error {
-	return snippets404
-}
-
-func (a *API) CreateSnippet(ctx context.Context, req *snippetsv1.CreateSnippetRequest) (*snippetsv1.Snippet, error) {
+func (a *API) CreateSnippet(ctx context.Context, req *snippetsv1.CreateSnippetRequest) (*snippetsv1.CreateSnippetResponse, error) {
 	me := tokens.GetAccount(ctx)
 	now := core.Now(ctx)
-	o := snippetsv1.Snippet{
-		Id:        ulid.Make().String(),
-		Name:      req.Name,
-		Query:     req.Query,
-		Params:    req.Params,
-		CreatedAt: timestamppb.New(now),
-		UpdatedAt: timestamppb.New(now),
-	}
+	key := keys.Snippet(req.Name)
 	err := db.Get(ctx).Txn(true, func(txn db.Txn) error {
-		key := keys.Snippet(me.Name, o.Id)
-		return txn.Set(key, px.Encode(&o))
+		if txn.Has(key) {
+			return status.Error(codes.AlreadyExists, "snippet already exists")
+		}
+		return txn.Set(key, px.Encode(&snippetsv1.Snippet{
+			Name:      req.Name,
+			Query:     req.Query,
+			Params:    req.Params,
+			CreatedBy: me.Name,
+			CreatedAt: timestamppb.New(now),
+			UpdatedAt: timestamppb.New(now),
+		}))
 	})
 	if err != nil {
 		return nil, err
 	}
-	return &o, nil
+	return &snippetsv1.CreateSnippetResponse{}, nil
 }
 
-func (a *API) UpdateSnippet(ctx context.Context, req *snippetsv1.UpdateSnippetRequest) (*snippetsv1.Snippet, error) {
-	me := tokens.GetAccount(ctx)
-	var o snippetsv1.Snippet
+func (a *API) UpdateSnippet(ctx context.Context, req *snippetsv1.UpdateSnippetRequest) (*snippetsv1.UpdateSnippetResposnes, error) {
+	key := keys.Snippet(req.Name)
 	err := db.Get(ctx).Txn(true, func(txn db.Txn) error {
-		key := keys.Snippet(me.Name, req.Id)
-		err := txn.Get(key, px.Decode(&o), SnippetsE404)
+		var o snippetsv1.Snippet
+		err := txn.Get(key, px.Decode(&o), snippetsE404)
 		if err != nil {
 			return err
 		}
@@ -65,14 +68,13 @@ func (a *API) UpdateSnippet(ctx context.Context, req *snippetsv1.UpdateSnippetRe
 	if err != nil {
 		return nil, err
 	}
-	return &o, nil
+	return &snippetsv1.UpdateSnippetResposnes{}, nil
 }
 
 func (a *API) ListSnippets(ctx context.Context, req *snippetsv1.ListSnippetsRequest) (*snippetsv1.ListSnippetsResponse, error) {
-	me := tokens.GetAccount(ctx)
 	var result snippetsv1.ListSnippetsResponse
 	err := db.Get(ctx).Txn(false, func(txn db.Txn) error {
-		key := keys.Snippet(me.Name, "")
+		key := keys.Snippet("")
 		it := txn.Iter(db.IterOpts{
 			Prefix:         key,
 			PrefetchValues: true,
@@ -96,13 +98,16 @@ func (a *API) ListSnippets(ctx context.Context, req *snippetsv1.ListSnippetsRequ
 }
 
 func (a *API) DeleteSnippet(ctx context.Context, req *snippetsv1.DeleteSnippetRequest) (*emptypb.Empty, error) {
-	me := tokens.GetAccount(ctx)
 	err := db.Get(ctx).Txn(true, func(txn db.Txn) error {
-		key := keys.Snippet(me.Name, req.Id)
-		return txn.Delete(key, SnippetsE404)
+		key := keys.Snippet(req.Name)
+		return txn.Delete(key, snippetsE404)
 	})
 	if err != nil {
 		return nil, err
 	}
 	return &emptypb.Empty{}, nil
+}
+
+func snippetsE404() error {
+	return ErrSnippetNotFound
 }
